@@ -17,7 +17,7 @@
     
     (c) 2006 Mike Lampard, Philip Lawatsch, and others
           
-        Revision $Revision$ - Last Modified $Date$ by $Author$
+     $Revision$ -  $Date$ $Author$
               
     This daemon listens on localhost port 15550 for client connections,
     and arbitrates LCD display.  Allows for multiple simultaneous clients.
